third_party/WebKit/Source/core/fetch/ResourceFetcher.cpp
@@ -466,8 +466,7 @@ Resource* ResourceFetcher::requestResource(FetchRequest& request, const Resource
 
     updateMemoryCacheStats(resource, policy, request, factory, isStaticData);
 
-    if (policy != Use)
-        willSendRequest(identifier, request.mutableResourceRequest(), ResourceResponse(), request.options());
+    request.mutableResourceRequest().setAllowStoredCredentials(request.options().allowCredentials == AllowStoredCredentials);
 
     switch (policy) {
     case Reload:
@@ -992,6 +991,9 @@ bool ResourceFetcher::startLoad(Resource* resource)
         return false;
     }
 
+    ResourceRequest request(resource->resourceRequest());
+    willSendRequest(resource->identifier(), request, ResourceResponse(), resource->options());
+
     ResourceLoader* loader = ResourceLoader::create(this, resource);
     if (resource->shouldBlockLoadEvent())
         m_loaders.add(loader);
@@ -1000,7 +1002,7 @@ bool ResourceFetcher::startLoad(Resource* resource)
 
     storeResourceTimingInitiatorInformation(resource);
     resource->setFetcherSecurityOrigin(context().getSecurityOrigin());
-    loader->start(resource->resourceRequest(), context().loadingTaskRunner(), context().defersLoading());
+    loader->start(request, context().loadingTaskRunner(), context().defersLoading());
     return true;
 }
 
@@ -1070,13 +1072,13 @@ bool ResourceFetcher::willFollowRedirect(Resource* resource, ResourceRequest& ne
         bool crossOrigin = !redirectedSecurityOrigin->isSameSchemeHostPort(originalSecurityOrigin.get());
         it->value->addRedirect(redirectResponse, encodedDataLength, crossOrigin);
     }
+    newRequest.setAllowStoredCredentials(resource->options().allowCredentials == AllowStoredCredentials);
     willSendRequest(resource->identifier(), newRequest, redirectResponse, resource->options());
     return true;
 }
 
 void ResourceFetcher::willSendRequest(unsigned long identifier, ResourceRequest& newRequest, const ResourceResponse& redirectResponse, const ResourceLoaderOptions& options)
 {
-    newRequest.setAllowStoredCredentials(options.allowCredentials == AllowStoredCredentials);
     context().dispatchWillSendRequest(identifier, newRequest, redirectResponse, options.initiatorInfo);
 }
 
